feat(visulize_multiplication): raise errors for wrong shapes on input matrices

--- a/Numpy examples.ipynb
+++ b/Numpy examples.ipynb
@@ -57,13 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def visulize_multiplication(matrices, names):\n",
-    "     \n",
+    "\n",
+    "    if matrices[0].shape[1] != matrices[1].shape[0]:\n",
+    "        raise ValueError(f'shapes {matrices[0].shape} and {matrices[1].shape} are not aligned')\n",
     "        \n",
+    "    if (matrices[0].shape[0],matrices[1].shape[1]) != matrices[2].shape:\n",
+    "        raise ValueError(f'{names[2]} should have shape {(matrices[0].shape[0],matrices[1].shape[1])}'\\\n",
+    "                         f' not shape {matrices[2].shape}')\n",
+    "    \n",
     "    fig, ax = plt.subplots(1,3,figsize=(10,10))\n",
     "    for i, matrix in enumerate(matrices):\n",
     "        im = ax[i].imshow(matrix, cmap=colormap)\n",
@@ -105,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating arrays"
+    "## Creating arrays and matrices"
    ]
   },
   {
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +197,9 @@
     }
    ],
    "source": [
+    "array = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "matrix = np.array([[10,11,12],[13,14,15], [16,17,18]])\n",
+    "\n",
     "min_array_val = np.min(array)\n",
     "max_array_val = np.max(array)\n",
     "min_matrix_val = np.min(matrix)\n",
@@ -205,12 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matrix multiplication"
+    "## Matrix multiplication"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
