chore: move visualization functions from notebook to visualizationtools.py

--- a/numpy-examples.ipynb
+++ b/numpy-examples.ipynb
@@ -2,121 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patheffects as path_effects\n",
     "import numpy as np\n",
-    "colormap = 'viridis'\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def visulize_array(array, name):\n",
-    "    # Check array is 1d\n",
-    "    if array.ndim == 1:\n",
-    "        array = np.array([array])\n",
-    "    \n",
-    "    column_num = array.shape[1]\n",
-    "    fig, ax = plt.subplots(figsize=(column_num*0.8,column_num))\n",
-    "    \n",
-    "    im = ax.imshow(array, cmap=colormap)\n",
-    "    \n",
-    "    # Plot numbers inside array squares \n",
-    "    for row in range(array.shape[0]):\n",
-    "        for col in range(array.shape[1]):\n",
-    "            text = ax.text(col, row, array[row, col],ha=\"center\", va=\"center\", color=\"w\", fontsize=15)\n",
-    "            text.set_path_effects([path_effects.Stroke(linewidth=0, foreground='black'),\n",
-    "                                   path_effects.withStroke()])\n",
-    "    \n",
-    "    # Turn off tick labels\n",
-    "    ax.set_yticklabels([])\n",
-    "    ax.set_xticklabels([])\n",
-    "    ax.xaxis.set_ticks_position('none') \n",
-    "    ax.yaxis.set_ticks_position('none') \n",
-    "    \n",
-    "    # Turn spines off and create white grid.\n",
-    "    for edge, spine in ax.spines.items():\n",
-    "        spine.set_visible(False)\n",
-    "    ax.set_xticks(np.arange(array.shape[1]+1)-.5, minor=True)\n",
-    "    ax.set_yticks(np.arange(array.shape[0]+1)-.5, minor=True)\n",
-    "    ax.grid(which=\"minor\", color=\"w\", linestyle='-', linewidth=2)\n",
-    "    ax.tick_params(which=\"minor\", bottom=False, left=False)\n",
-    "\n",
-    "    ax.set_title(name, fontsize=12)\n",
-    "    plt.xlabel(array.shape,fontsize=12)\n",
-    "    #fig.tight_layout()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def visulize_multiplication(matrices, names):\n",
-    "\n",
-    "    if matrices[0].shape[1] != matrices[1].shape[0]:\n",
-    "        raise ValueError(f'shapes {matrices[0].shape} and {matrices[1].shape} are not aligned')\n",
-    "        \n",
-    "    if (matrices[0].shape[0],matrices[1].shape[1]) != matrices[2].shape:\n",
-    "        raise ValueError(f'{names[2]} should have shape {(matrices[0].shape[0],matrices[1].shape[1])}'\\\n",
-    "                         f' not shape {matrices[2].shape}')\n",
-    "    \n",
-    "    # The gridspec_kw = {'width_ratios': ... } scales the width of the plots to have \n",
-    "    # the correct width with the repect to number of colums there are in the matrix\n",
-    "    min_columns = np.min(np.array([matrices[0].shape[1], matrices[1].shape[1], matrices[2].shape[1]]))\n",
-    "    total_column_n = matrices[0].shape[1] + matrices[1].shape[1] + matrices[2].shape[1]\n",
-    "\n",
-    "    fig, ax = plt.subplots(1,3, gridspec_kw = {'width_ratios':[matrices[0].shape[1]-min_columns+1,    \n",
-    "                                                               matrices[1].shape[1]-min_columns+1,    \n",
-    "                                                               matrices[2].shape[1]-min_columns+1]},\n",
-    "                          figsize=(total_column_n*0.8,10))   \n",
-    "    \n",
-    "    for i, matrix in enumerate(matrices):\n",
-    "        im = ax[i].imshow(matrix, cmap=colormap)\n",
-    "        # Plot numbers inside matrix squares \n",
-    "        for row in range(matrix.shape[0]):\n",
-    "            for col in range(matrix.shape[1]):\n",
-    "                text = ax[i].text(col, row, matrix[row, col],ha=\"center\", va=\"center\", color=\"w\", fontsize=15)\n",
-    "                text.set_path_effects([path_effects.Stroke(linewidth=0, foreground='black'),\n",
-    "                                       path_effects.withStroke()])\n",
-    "        \n",
-    "        # Turn off tick labels\n",
-    "        ax[i].set_yticklabels([])\n",
-    "        ax[i].set_xticklabels([])\n",
-    "        ax[i].xaxis.set_ticks_position('none') \n",
-    "        ax[i].yaxis.set_ticks_position('none') \n",
-    "        \n",
-    "        # Turn spines off and create white grid.\n",
-    "        for edge, spine in ax[i].spines.items():\n",
-    "            spine.set_visible(False)\n",
-    "        ax[i].set_xticks(np.arange(matrix.shape[1]+1)-.5, minor=True)\n",
-    "        ax[i].set_yticks(np.arange(matrix.shape[0]+1)-.5, minor=True)\n",
-    "        ax[i].grid(which=\"minor\", color=\"w\", linestyle='-', linewidth=2)\n",
-    "        ax[i].tick_params(which=\"minor\", bottom=False, left=False)\n",
-    "        \n",
-    "        # Write on axis\n",
-    "        ax[i].set_title(names[i], fontsize=12)\n",
-    "        ax[i].set_xlabel(matrix.shape,fontsize=12)\n",
-    "        if i == 1:\n",
-    "            ax[i].set_ylabel(\"•\",fontsize=20, y = 0.52)\n",
-    "        if i == 2:\n",
-    "            ax[i].set_ylabel('=',fontsize=20, rotation=0, labelpad=15, y = 0.40)\n",
-    "            \n",
-    "    figsize=(1,1)\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()"
+    "from visualizationtools import visulize_array, visulize_multiplication "
    ]
   },
   {
@@ -128,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -158,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -285,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -497,18 +390,11 @@
     "visulize_array(x, 'array')\n",
     "sliced_array_1 = x[-4:10]\n",
     "sliced_array_2 = x[0:-4]\n",
-    "sliced_array_3 = x[-2:1:-2] # [10-2:1:-2] = [8:1:-2]\n",
+    "sliced_array_3 = x[-2:1:-2] # [10-2:1:-2] = [8:1:€∞§-2]\n",
     "visulize_array(sliced_array_1, 'sliced_array_1')\n",
     "visulize_array(sliced_array_2, 'sliced_array_2')\n",
     "visulize_array(sliced_array_3, 'sliced_array_3')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
