--- a/numpy-examples.ipynb
+++ b/numpy-examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,13 @@
     "%config InlineBackend.figure_format = 'retina'\n",
     "import numpy as np\n",
     "from visualizationtools import visulize_array, visulize_multiplication "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The examples are inspired by the official [NumPy documentation](https://docs.scipy.org/doc/numpy-1.13.0/index.html) and the [Python Numpy Tutorial](http://cs231n.github.io/python-numpy-tutorial/#python-lists) from [CS231n: Convolutional Neural Networks for Visual Recognition](http://cs231n.stanford.edu/)."
    ]
   },
   {
@@ -178,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -548,40 +555,12 @@
    "metadata": {},
    "source": [
     "## Row and Column slicing\n",
-    "When the arrays are multideimensinal, you must specify a slice for each dimension of the array. You can also mix integer indexing with slice indexing, but doing so will yield an array of lower dimmension than the original array. The array dimensions can be found with `x.ndim`. Check out [cs231n](http://cs231n.github.io/python-numpy-tutorial/)."
+    "When the arrays are multideimensinal, you must specify a slice for each dimension of the array. You can also mix integer indexing with slice indexing, but doing so will yield an array of lower dimmension than the original array. The array dimensions can be found with `x.ndim`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x dimmension: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([[1,2,3], [4,5,6], [7,8,9]])\n",
-    "print(f'x dimmension: {x.ndim}')\n",
-    "\n",
-    "# slice indexing\n",
-    "row_1_2d = x[0:1, :]\n",
-    "row_2_2d = x[1:2, :] \n",
-    "row_3_2d = x[2:3, :]\n",
-    "\n",
-    "# slice indexing\n",
-    "col_1_2d = x[:, 0:1]\n",
-    "col_2_2d = x[:, 1:2]\n",
-    "col_3_2d = x[:, 2:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
